examples/test/testpolicy3332.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3332
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key48: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value48
      podSelector:
        matchLabels:
          key16: value42
          key25: value42
          key42: value47
